--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JAVASCRIPT BASIC</title>
 </head>
+<script src="./chapter-2/browser_console.js">
+
+</script>
 <body>
     <h1>HELLO WORLD FROM HTML</h1>
 </body>
-</html>l
+</html>
