--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JAVASCRIPT BASIC</title>
 </head>
-<script src="./chapter-2/browser_console.js">
-
-</script>
+<script src="./chapter-2/browser_console.js"></script>
+<script src="./chapter-2/variables_constants.js"></script>
 <body>
     <h1>HELLO WORLD FROM HTML</h1>
 </body>
